# logging_tool

./: .gitignore  COPYING  build.bat  log.py  pyproject.toml  simplelog.py
